# product-image-generator-skill

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  run.bat  run.sh
.github/workflows/: test.yml
examples/cold-plunge/: README.md  product-oval.yaml  product-round.yaml
examples/cold-plunge/references/: README.md
scripts/: generate.py
src/product_image_skill/: __init__.py  cli.py  config.py  generator.py  models.py  prompts.py  provider.py  render.py
tests/: test_skill.py
